[gd_scene load_steps=7 format=3 uid="uid://rto7lxxjwb0i"]

[ext_resource type="Script" uid="uid://yt5mdx52xx23" path="res://ui/hud.gd" id="1_1v5rv"]
[ext_resource type="LabelSettings" uid="uid://bo6vnvb5yiey4" path="res://resource/ui_pixel_label_settings.tres" id="1_en2x2"]
[ext_resource type="PackedScene" uid="uid://761n3ybx2i01" path="res://ui/buttons/pause_button.tscn" id="2_1v5rv"]
[ext_resource type="PackedScene" uid="uid://u17vyaob2nnc" path="res://ui/buttons/audio_bus_button.tscn" id="3_q43x7"]
[ext_resource type="StyleBox" uid="uid://42ypp5rrhahr" path="res://resource/music_on_button.tres" id="4_srpbi"]
[ext_resource type="StyleBox" uid="uid://bsyvpxotsgpof" path="res://resource/music_off_button.tres" id="5_spcu4"]

[node name="HUD" type="MarginContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 172.0
grow_horizontal = 2
theme_type_variation = &"Wrapper"
theme_override_constants/margin_top = 32
script = ExtResource("1_1v5rv")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 132)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="LivesVBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/LivesVBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/LivesVBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/LivesVBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "LIVES"
label_settings = ExtResource("1_en2x2")

[node name="ScoreHBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8

[node name="ScoreLabelsVBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/ScoreHBoxContainer"]
layout_mode = 2

[node name="SLabel" type="Label" parent="PanelContainer/HBoxContainer/ScoreHBoxContainer/ScoreLabelsVBoxContainer"]
layout_mode = 2
text = "SCORE:"
label_settings = ExtResource("1_en2x2")
horizontal_alignment = 2

[node name="HiLabel" type="Label" parent="PanelContainer/HBoxContainer/ScoreHBoxContainer/ScoreLabelsVBoxContainer"]
layout_mode = 2
text = "HIGHSCORE:"
label_settings = ExtResource("1_en2x2")
horizontal_alignment = 2

[node name="CLabel" type="Label" parent="PanelContainer/HBoxContainer/ScoreHBoxContainer/ScoreLabelsVBoxContainer"]
layout_mode = 2
text = "COINS:"
label_settings = ExtResource("1_en2x2")
horizontal_alignment = 2

[node name="WLabel" type="Label" parent="PanelContainer/HBoxContainer/ScoreHBoxContainer/ScoreLabelsVBoxContainer"]
layout_mode = 2
text = "WAVE:"
label_settings = ExtResource("1_en2x2")
horizontal_alignment = 2

[node name="ScoreValuesVBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer/ScoreHBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="PanelContainer/HBoxContainer/ScoreHBoxContainer/ScoreValuesVBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "769"
label_settings = ExtResource("1_en2x2")

[node name="HighScoreLabel" type="Label" parent="PanelContainer/HBoxContainer/ScoreHBoxContainer/ScoreValuesVBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "769"
label_settings = ExtResource("1_en2x2")

[node name="CoinsLabel" type="Label" parent="PanelContainer/HBoxContainer/ScoreHBoxContainer/ScoreValuesVBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "12"
label_settings = ExtResource("1_en2x2")

[node name="WaveLabel" type="Label" parent="PanelContainer/HBoxContainer/ScoreHBoxContainer/ScoreValuesVBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "1"
label_settings = ExtResource("1_en2x2")

[node name="ButtonsMarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/ButtonsMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PauseButton" parent="PanelContainer/HBoxContainer/ButtonsMarginContainer/VBoxContainer" instance=ExtResource("2_1v5rv")]
layout_mode = 2
size_flags_horizontal = 8

[node name="SfxAudioBusButton" parent="PanelContainer/HBoxContainer/ButtonsMarginContainer/VBoxContainer" instance=ExtResource("3_q43x7")]
layout_mode = 2
audio_bus_name = "SFX"

[node name="MusicAudioBusButton" parent="PanelContainer/HBoxContainer/ButtonsMarginContainer/VBoxContainer" instance=ExtResource("3_q43x7")]
layout_mode = 2
audio_bus_name = "Music"
style_box_on = ExtResource("4_srpbi")
style_box_off = ExtResource("5_spcu4")

[connection signal="game_paused" from="PanelContainer/HBoxContainer/ButtonsMarginContainer/VBoxContainer/PauseButton" to="." method="_on_pause_button_game_paused"]
